# bittrade-kraken-websocket

./: .gitignore  CHANGELOG.md  README.md  experiment.py  pyproject.toml  pyrightconfig.json
.run/: examples.private_subscription.run.xml  examples.public_subscription.run.xml  pytest in tests.run.xml
bittrade_kraken_websocket/: __init__.py
bittrade_kraken_websocket/channels/: __init__.py  open_orders.py  order_book.py  own_trades.py  payload.py  subscribe.py  ticker.py
bittrade_kraken_websocket/connection/: __init__.py  connection_operators.py  enhanced_websocket.py  generic.py  private.py  public.py  reconnect.py  status.py
bittrade_kraken_websocket/development/: __init__.py
bittrade_kraken_websocket/events/: __init__.py  _subscribe_private.py  add_order.py  cancel_order.py  events.py  ids.py  message.py  request_response.py  subscribe.py
bittrade_kraken_websocket/framework/: framework.py
bittrade_kraken_websocket/messages/: listen.py  relevant.py  sequence.py
bittrade_kraken_websocket/models/: framework.py
bittrade_kraken_websocket/operators/: __init__.py  _share.py  keep_order_ids.py
examples/: blocking.py  private_subscription.py  public_subscription.py  readme_code.py  reconnecting_websocket.py  reconnecting_websocket_slow.py  ticker_payload.py
tests/: test_bittrade_kraken_websocket.py  test_practice.py
tests/channels/: test_own_trades.py
tests/connection/: test_enhanced_websocket.py  test_generic.py  test_private.py  test_reconnect.py
tests/events/: test_add_order.py  test_request_response.py
tests/helpers/: from_sample.py  (+1 more)
(+16 files in other folders)
