[tool.poetry]
name = "bittrade-kraken-websocket"
version = "0.2.1"
description = "Reactive Websocket for Kraken"
authors = ["mat <matt@techspace.asia>"]
documentation = "README.md"
repository = "https://github.com/TechSpaceAsia/bittrade-kraken-websocket"
homepage = "https://github.com/TechSpaceAsia/bittrade-kraken-websocket"

[tool.poetry.dependencies]
python = "^3.10"
bittrade-kraken-rest = "^0.10.0"
reactivex = "^4.0.4"
websocket-client = "^1.4.2"
orjson = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"
rich = "^12.6.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.env.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
